crt: Regenerate Makefile.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/testcases/Makefile.in
+++ b/mingw-w64-crt/testcases/Makefile.in
@@ -192,8 +192,8 @@ am__EXEEXT_2 = tstmainc$(EXEEXT) tstmaincpp$(EXEEXT) \
 	t_speed_powl$(EXEEXT) t_stat$(EXEEXT) t_stdint$(EXEEXT) \
 	t_time$(EXEEXT) t_tls1$(EXEEXT) t_trycatch$(EXEEXT) \
 	t_stat_slash$(EXEEXT) t_vsscanf$(EXEEXT) t_wcrtomb$(EXEEXT) \
-	t_wcsrtombs$(EXEEXT) t_wctob$(EXEEXT) t_wreaddir$(EXEEXT) \
-	t_fseeko64$(EXEEXT) $(am__EXEEXT_1)
+	t_wcsrtombs$(EXEEXT) t_wcstok_s$(EXEEXT) t_wctob$(EXEEXT) \
+	t_wreaddir$(EXEEXT) t_fseeko64$(EXEEXT) $(am__EXEEXT_1)
 @LIB32_TRUE@am__EXEEXT_3 = tests32/cimag$(EXEEXT) \
 @LIB32_TRUE@	tests32/creal$(EXEEXT) tests32/cabs$(EXEEXT) \
 @LIB32_TRUE@	tests32/cacos$(EXEEXT) tests32/cacosh$(EXEEXT) \
@@ -596,6 +596,9 @@ t_wcrtomb_LDADD = $(LDADD)
 t_wcsrtombs_SOURCES = t_wcsrtombs.c
 t_wcsrtombs_OBJECTS = t_wcsrtombs.$(OBJEXT)
 t_wcsrtombs_LDADD = $(LDADD)
+t_wcstok_s_SOURCES = t_wcstok_s.c
+t_wcstok_s_OBJECTS = t_wcstok_s.$(OBJEXT)
+t_wcstok_s_LDADD = $(LDADD)
 t_wctob_SOURCES = t_wctob.c
 t_wctob_OBJECTS = t_wctob.$(OBJEXT)
 t_wctob_LDADD = $(LDADD)
@@ -960,9 +963,9 @@ am__depfiles_remade = ./$(DEPDIR)/t__fstat_all.Po \
 	./$(DEPDIR)/t_tls1.Po ./$(DEPDIR)/t_tmain-t_tmain.Po \
 	./$(DEPDIR)/t_trycatch.Po ./$(DEPDIR)/t_vsscanf.Po \
 	./$(DEPDIR)/t_wcrtomb.Po ./$(DEPDIR)/t_wcsrtombs.Po \
-	./$(DEPDIR)/t_wctob.Po ./$(DEPDIR)/t_wreaddir.Po \
-	./$(DEPDIR)/tstmain_sys_xxx.Po ./$(DEPDIR)/tstmainc.Po \
-	./$(DEPDIR)/tstmaincpp.Po \
+	./$(DEPDIR)/t_wcstok_s.Po ./$(DEPDIR)/t_wctob.Po \
+	./$(DEPDIR)/t_wreaddir.Po ./$(DEPDIR)/tstmain_sys_xxx.Po \
+	./$(DEPDIR)/tstmainc.Po ./$(DEPDIR)/tstmaincpp.Po \
 	complex/$(DEPDIR)/tests32_cabs-main.Po \
 	complex/$(DEPDIR)/tests32_cacos-main.Po \
 	complex/$(DEPDIR)/tests32_cacosh-main.Po \
@@ -1186,7 +1189,7 @@ SOURCES = $(tests32_libnewcomplextests_a_SOURCES) \
 	t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c t_swprintf.c \
 	t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c t_tmain.c \
 	$(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c t_wcsrtombs.c \
-	t_wctob.c t_wreaddir.c $(tests32_cabs_SOURCES) \
+	t_wcstok_s.c t_wctob.c t_wreaddir.c $(tests32_cabs_SOURCES) \
 	$(tests32_cacos_SOURCES) $(tests32_cacosh_SOURCES) \
 	$(tests32_carg_SOURCES) $(tests32_casin_SOURCES) \
 	$(tests32_casinh_SOURCES) $(tests32_catan_SOURCES) \
@@ -1227,7 +1230,7 @@ DIST_SOURCES = $(am__tests32_libnewcomplextests_a_SOURCES_DIST) \
 	t_stprintf1_a.c t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c \
 	t_swprintf.c t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c \
 	t_tmain.c $(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c \
-	t_wcsrtombs.c t_wctob.c t_wreaddir.c \
+	t_wcsrtombs.c t_wcstok_s.c t_wctob.c t_wreaddir.c \
 	$(am__tests32_cabs_SOURCES_DIST) \
 	$(am__tests32_cacos_SOURCES_DIST) \
 	$(am__tests32_cacosh_SOURCES_DIST) \
@@ -1647,7 +1650,8 @@ testcase_progs = tstmainc tstmaincpp tstmain_sys_xxx t__fstat_all \
 	t_stprintf_u t_stprintf0_a t_stprintf0_u t_stprintf1_a \
 	t_stprintf1_u t_setjmp t_sigv t_speed_powl t_stat t_stdint \
 	t_time t_tls1 t_trycatch t_stat_slash t_vsscanf t_wcrtomb \
-	t_wcsrtombs t_wctob t_wreaddir t_fseeko64 $(am__append_1)
+	t_wcsrtombs t_wcstok_s t_wctob t_wreaddir t_fseeko64 \
+	$(am__append_1)
 tstmaincpp_SOURCES = tstmaincpp.cpp
 t_trycatch_SOURCES = t_trycatch.cpp
 t_trycatch_LDFLAGS = -static
@@ -2492,6 +2496,10 @@ t_wcsrtombs$(EXEEXT): $(t_wcsrtombs_OBJECTS) $(t_wcsrtombs_DEPENDENCIES) $(EXTRA
 	@rm -f t_wcsrtombs$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(t_wcsrtombs_OBJECTS) $(t_wcsrtombs_LDADD) $(LIBS)
 
+t_wcstok_s$(EXEEXT): $(t_wcstok_s_OBJECTS) $(t_wcstok_s_DEPENDENCIES) $(EXTRA_t_wcstok_s_DEPENDENCIES) 
+	@rm -f t_wcstok_s$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(t_wcstok_s_OBJECTS) $(t_wcstok_s_LDADD) $(LIBS)
+
 t_wctob$(EXEEXT): $(t_wctob_OBJECTS) $(t_wctob_DEPENDENCIES) $(EXTRA_t_wctob_DEPENDENCIES) 
 	@rm -f t_wctob$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(t_wctob_OBJECTS) $(t_wctob_LDADD) $(LIBS)
@@ -2831,6 +2839,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_vsscanf.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_wcrtomb.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_wcsrtombs.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_wcstok_s.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_wctob.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_wreaddir.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tstmain_sys_xxx.Po@am__quote@ # am--include-marker
@@ -6093,6 +6102,13 @@ t_wcsrtombs.log: t_wcsrtombs$(EXEEXT)
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
+t_wcstok_s.log: t_wcstok_s$(EXEEXT)
+	@p='t_wcstok_s$(EXEEXT)'; \
+	b='t_wcstok_s'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
 t_wctob.log: t_wctob$(EXEEXT)
 	@p='t_wctob$(EXEEXT)'; \
 	b='t_wctob'; \
@@ -6587,6 +6603,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/t_vsscanf.Po
 	-rm -f ./$(DEPDIR)/t_wcrtomb.Po
 	-rm -f ./$(DEPDIR)/t_wcsrtombs.Po
+	-rm -f ./$(DEPDIR)/t_wcstok_s.Po
 	-rm -f ./$(DEPDIR)/t_wctob.Po
 	-rm -f ./$(DEPDIR)/t_wreaddir.Po
 	-rm -f ./$(DEPDIR)/tstmain_sys_xxx.Po
@@ -6861,6 +6878,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/t_vsscanf.Po
 	-rm -f ./$(DEPDIR)/t_wcrtomb.Po
 	-rm -f ./$(DEPDIR)/t_wcsrtombs.Po
+	-rm -f ./$(DEPDIR)/t_wcstok_s.Po
 	-rm -f ./$(DEPDIR)/t_wctob.Po
 	-rm -f ./$(DEPDIR)/t_wreaddir.Po
 	-rm -f ./$(DEPDIR)/tstmain_sys_xxx.Po
