winpthreads: move tests for clock_* functions to clock subdirectory
This commit is a preparation step for integrating tests in
tests_pthread subdirectory with Automake.

This commit also removes test.c, which has not been touched in 12 years.
tests/Makefile.am decribed this test as "inherently broken".

Signed-off-by: Kirill Makurin <maiddaisuki@outlook.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-libraries/winpthreads/tests/Makefile.am
+++ b/mingw-w64-libraries/winpthreads/tests/Makefile.am
@@ -7,6 +7,11 @@ endif
 
 LDADD = $(top_builddir)/libwinpthread.la
 
-#FIXME: The test "test.c" is inherently broken currently.
-check_PROGRAMS = t_clock_getres  t_clock_gettime  t_clock_nanosleep  t_clock_settime  t_nanosleep  #test
+check_PROGRAMS =            \
+	clock/t_clock_getres    \
+	clock/t_clock_gettime   \
+	clock/t_clock_nanosleep \
+	clock/t_clock_settime   \
+	clock/t_nanosleep
+
 TESTS = $(check_PROGRAMS)
