winpthreads: fix compilation of some tests with recent gcc
Compilation of the following tests fails with recent versions of gcc:

- pthread_cancel/cancel8.c
- pthread_condvar/condvar7.c
- pthread_condvar/condvar8.c
- pthread_condvar/condvar9.c
- pthread_misc/delay2.c

This is caused by passing a function with incompatible type as an argument,
which is an error by default.

To fix this issue, use a wrapper function with appropriate signature.

Signed-off-by: Kirill Makurin <maiddaisuki@outlook.com>
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-libraries/winpthreads/tests/Makefile.am
+++ b/mingw-w64-libraries/winpthreads/tests/Makefile.am
@@ -3,7 +3,7 @@ AM_CFLAGS =
 AM_LDFLAGS = -L$(top_builddir)
 
 if !MSVC
-AM_CFLAGS += -Wno-error=int-conversion -Wno-error=incompatible-pointer-types
+AM_CFLAGS += -Wno-error=int-conversion
 AM_LDFLAGS += -L$(top_builddir)/fakelib
 endif
 
