crt: Remove duplicate files ucrt_btowc.c/ucrt_wctob.c and move btowc.c/wctob.c back to libmingwex
Implementation of btowc.c and wctob.c is same for all CRTs except the
mbstate_t structure. Define __LARGE_MBSTATE_T for btowc.c and wctob.c in
the same way as it is used in mingw_pformat.c, mingw_sformat.c and
mingw_swformat.c files to make code compatible with all CRT libs.

This change allows to move btowc.c and wctob.c files back to libmingwex and
compile them only once, like it was before commit 9d00799905c3 ("crt:
always use replacements for btowc and wctob").

Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -168,7 +168,6 @@ src_libws2_32=libsrc/ws2_32.c \
 # Files included in all libmsvcr*.a
 src_msvcrt_common=\
   misc/_onexit.c \
-  misc/btowc.c \
   misc/mbrlen.c \
   misc/mbrtowc.c \
   misc/mbsinit.c \
@@ -177,7 +176,6 @@ src_msvcrt_common=\
   misc/register_tls_atexit.c \
   misc/wcrtomb.c \
   misc/wcsrtombs.c \
-  misc/wctob.c \
   stdio/_getc_nolock.c \
   stdio/_getwc_nolock.c \
   stdio/_putc_nolock.c \
@@ -427,8 +425,6 @@ src_ucrtbase=\
   misc/_onexit.c \
   misc/output_format.c \
   misc/ucrt-access.c \
-  misc/ucrt_btowc.c \
-  misc/ucrt_wctob.c \
   stdio/ucrt___local_stdio_printf_options.c \
   stdio/ucrt___local_stdio_scanf_options.c \
   stdio/ucrt__scprintf.c \
@@ -1138,6 +1134,7 @@ src_libmingwex=\
   misc/wcstof.c \
   misc/wcstold.c \
   misc/wdirent.c         misc/winbs_uint64.c        misc/winbs_ulong.c      misc/winbs_ushort.c    \
+  misc/btowc.c           misc/wctob.c \
   misc/wmemchr.c         misc/wmemcmp.c             misc/wmemcpy.c          misc/wmemmove.c              misc/wmempcpy.c        \
   misc/wmemset.c         misc/mingw-access.c \
   misc/ftw32.c           misc/ftw32i64.c            misc/ftw64.c            misc/ftw64i32.c \
