crt: Remove mingw-w64 _ismbblead() emulation
Emulation implementation is incorrect as it does not use code page set by
the _setmbcp() call. Improper emulation of _ismbblead() was added only for
crtexewin.c usage and it is not needed anymore as crtexewin.c does not call
_ismbblead() anymore. So remove mingw-w64 _ismbblead() emulation.

Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib32/crtdll.def.in
+++ b/mingw-w64-crt/lib32/crtdll.def.in
@@ -227,7 +227,7 @@ _ismbbgraph
 _ismbbkalnum
 _ismbbkana
 _ismbbkpunct
-; _ismbblead is replaced by emu
+_ismbblead
 _ismbbprint
 _ismbbpunct
 _ismbbtrail
