crt: Define ftruncate symbol via alias in crt-aliases.def.in
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -291,6 +291,7 @@ ADD_UNDERSCORE(popen)
 #endif
 fseeko == fseek
 ftello == ftell
+ftruncate == _chsize
 ; ADD_UNDERSCORE(scalb)
 
 ; This is list of symbol aliases for Large File Specification (extension to Single UNIX Specification)
