crt: Provide ftruncate64 function via wrapper around native CRT function _chsize_s
msvcrt and UCRT function _chsize() has same behavior and also ABI as POSIX
function ftruncate() with 32-bit length.

For 64-bit length msvcr80+ and UCRT provide function _chsize_s() but it
has slightly different usage as _chksize() / ftruncate() and so cannot be
directly aliased at symbol ABI level.

Function _chsize_s() calls invalid parameter exception handler and return
value is errno.

mingw-w64 currently provides its own ftruncate64() implementation which is
statically linked into every binary which calls ftruncate64().

For msvcr80+ and UCRT builds, provide a new ftruncate64() implementation as
a simple wrapper around the CRT _chsize_s() function. To prevent calling
invalid parameter exception handler, validate input parametes manually
before calling the function itself.

For pre-msvcr80 builds use the existing mingw-w64 implemenation of
ftruncate64() function.

And for OS-system msvcrt.dll builds use either the _chsize_s() or the
mingw-w64 implemation. Function symbol _chsize_s in msvcrt.dll is
available since Windows Vista, so for x86/x64 builds, resolve that symbol
at runtime.

Note that OS-system msvcrt.dll _chsize_s() does not call invalid parameter
exception handler, so call function directly without validation.

To prevent symbol conflicts between existing mingw-w64 implementation of
ftruncate64 and new wrapper implementation (around _chsize_s), rename the
existing mingw-w64 implementation to __mingw_ftruncate64.

With this change, calling the ftruncate64 function symbol results in using
the native _chsize_s CRT implementation for msvcr80+ and UCRT builds.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -369,6 +369,7 @@ src_msvcrt=\
   secapi/wmemmove_s.c \
   stdio/_ftelli64.c \
   stdio/mingw_lock.c \
+  stdio/msvcrtos_ftruncate64.c \
   stdio/msvcr110pre_stat32.c \
   stdio/msvcr110pre_stat64i32.c \
   stdio/msvcr110pre_wstat32.c \
@@ -435,6 +436,7 @@ src_ucrtbase=\
   misc/_onexit.c \
   misc/output_format.c \
   misc/ucrt-access.c \
+  stdio/msvcr80plus_ftruncate64.c \
   stdio/ucrt___local_stdio_printf_options.c \
   stdio/ucrt___local_stdio_scanf_options.c \
   stdio/ucrt__scprintf.c \
@@ -937,6 +939,7 @@ src_pre_msvcr80=\
   stdio/_stat64i32.c \
   stdio/_wstat64i32.c \
   stdio/mingw_lock.c \
+  stdio/msvcr80pre_ftruncate64.c \
   string/msvcr80pre_wcstok.c
 
 src_pre_msvcr100=\
@@ -963,6 +966,7 @@ src_pre_msvcr120_post_msvcr71=\
   misc/_iswblank_l.c
 
 src_post_msvcr71=\
+  stdio/msvcr80plus_ftruncate64.c \
   string/msvcr80plus_wcstok.c
 
 src_post_msvcr80=\
@@ -1175,7 +1179,7 @@ src_libmingwex=\
   stdio/strtok_r.c \
   stdio/_Exit.c            stdio/_findfirst64i32.c   stdio/_findnext64i32.c   stdio/_wfindfirst64i32.c  stdio/_wfindnext64i32.c \
   stdio/asprintf.c \
-  stdio/ftruncate64.c      stdio/lltoa.c             stdio/lltow.c \
+  stdio/mingw_ftruncate64.c      stdio/lltoa.c             stdio/lltow.c \
   stdio/__mingw_fix_stat.h stdio/__mingw_fix_stat_finish.c \
   stdio/__mingw_fix_stat_path.c stdio/__mingw_fix_wstat_path.c \
   \
