--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -850,6 +850,7 @@ src_pre_msvcrt20=\
   misc/__p__winver.c \
   misc/__timezone.c \
   misc/__tzname.c \
+  stdio/_telli64.c \
   stdio/fgetws.c \
   stdio/fputws.c \
   stdio/iob_func.c
