crt: Split truncate64 implementation into its own file
With this change linker does not statically link 32-bit truncate() function
when only 64-bit truncate64() is used.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -1192,7 +1192,7 @@ src_libmingwex=\
   stdio/mingw_vsnprintf.c  stdio/mingw_vswprintf.c   stdio/mingw_vsnwprintf.c stdio/mingw_vsprintf.c    stdio/mingw_wscanf.c    \
   stdio/mingw_vfwscanf.c   stdio/mingw_vswscanf.c    stdio/mingw_vsscanf.c    stdio/mingw_sformat.c     stdio/mingw_swformat.c  \
   \
-  stdio/snprintf.c         stdio/snwprintf.c         stdio/truncate.c        \
+  stdio/snprintf.c         stdio/snwprintf.c         stdio/truncate.c         stdio/truncate64.c \
   stdio/ulltoa.c           stdio/ulltow.c            stdio/vasprintf.c \
   stdio/vsnprintf.c        stdio/vsnwprintf.c \
   stdio/wtoll.c            stdio/mingw_asprintf.c    stdio/mingw_vasprintf.c
