--- a/mingw-w64-crt/testcases/Makefile.in
+++ b/mingw-w64-crt/testcases/Makefile.in
@@ -181,19 +181,20 @@ am__EXEEXT_2 = tstmainc$(EXEEXT) tstmaincpp$(EXEEXT) \
 	t_float$(EXEEXT) t_fstat$(EXEEXT) t_intrinc$(EXEEXT) \
 	t_imagebase$(EXEEXT) t_lfs$(EXEEXT) t_matherr$(EXEEXT) \
 	t_mbrlen$(EXEEXT) t_mbrtowc$(EXEEXT) t_mbsrtowcs$(EXEEXT) \
-	t_nullptrexception$(EXEEXT) t_readdir$(EXEEXT) \
-	t_snprintf$(EXEEXT) t_snprintf0$(EXEEXT) t_snprintf1$(EXEEXT) \
-	t_swprintf$(EXEEXT) t_swprintf0$(EXEEXT) t_swprintf1$(EXEEXT) \
-	t_snwprintf$(EXEEXT) t_snwprintf0$(EXEEXT) \
-	t_snwprintf1$(EXEEXT) t_stprintf_a$(EXEEXT) \
-	t_stprintf_u$(EXEEXT) t_stprintf0_a$(EXEEXT) \
-	t_stprintf0_u$(EXEEXT) t_stprintf1_a$(EXEEXT) \
-	t_stprintf1_u$(EXEEXT) t_setjmp$(EXEEXT) t_sigv$(EXEEXT) \
-	t_speed_powl$(EXEEXT) t_stat$(EXEEXT) t_stdint$(EXEEXT) \
-	t_time$(EXEEXT) t_tls1$(EXEEXT) t_trycatch$(EXEEXT) \
-	t_stat_slash$(EXEEXT) t_vsscanf$(EXEEXT) t_wcrtomb$(EXEEXT) \
-	t_wcsrtombs$(EXEEXT) t_wcstok_s$(EXEEXT) t_wctob$(EXEEXT) \
-	t_wreaddir$(EXEEXT) t_fseeko64$(EXEEXT) $(am__EXEEXT_1)
+	t_nullptrexception$(EXEEXT) t_printf_g_width$(EXEEXT) \
+	t_readdir$(EXEEXT) t_snprintf$(EXEEXT) t_snprintf0$(EXEEXT) \
+	t_snprintf1$(EXEEXT) t_swprintf$(EXEEXT) t_swprintf0$(EXEEXT) \
+	t_swprintf1$(EXEEXT) t_snwprintf$(EXEEXT) \
+	t_snwprintf0$(EXEEXT) t_snwprintf1$(EXEEXT) \
+	t_stprintf_a$(EXEEXT) t_stprintf_u$(EXEEXT) \
+	t_stprintf0_a$(EXEEXT) t_stprintf0_u$(EXEEXT) \
+	t_stprintf1_a$(EXEEXT) t_stprintf1_u$(EXEEXT) \
+	t_setjmp$(EXEEXT) t_sigv$(EXEEXT) t_speed_powl$(EXEEXT) \
+	t_stat$(EXEEXT) t_stdint$(EXEEXT) t_time$(EXEEXT) \
+	t_tls1$(EXEEXT) t_trycatch$(EXEEXT) t_stat_slash$(EXEEXT) \
+	t_vsscanf$(EXEEXT) t_wcrtomb$(EXEEXT) t_wcsrtombs$(EXEEXT) \
+	t_wcstok_s$(EXEEXT) t_wctob$(EXEEXT) t_wreaddir$(EXEEXT) \
+	t_fseeko64$(EXEEXT) $(am__EXEEXT_1)
 @LIB32_TRUE@am__EXEEXT_3 = tests32/cimag$(EXEEXT) \
 @LIB32_TRUE@	tests32/creal$(EXEEXT) tests32/cabs$(EXEEXT) \
 @LIB32_TRUE@	tests32/cacos$(EXEEXT) tests32/cacosh$(EXEEXT) \
@@ -505,6 +506,9 @@ t_municode_LINK = $(CCLD) $(t_municode_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
 t_nullptrexception_SOURCES = t_nullptrexception.c
 t_nullptrexception_OBJECTS = t_nullptrexception.$(OBJEXT)
 t_nullptrexception_LDADD = $(LDADD)
+t_printf_g_width_SOURCES = t_printf_g_width.c
+t_printf_g_width_OBJECTS = t_printf_g_width.$(OBJEXT)
+t_printf_g_width_LDADD = $(LDADD)
 t_readdir_SOURCES = t_readdir.c
 t_readdir_OBJECTS = t_readdir.$(OBJEXT)
 t_readdir_LDADD = $(LDADD)
@@ -948,7 +952,8 @@ am__depfiles_remade = ./$(DEPDIR)/t__fstat_all.Po \
 	./$(DEPDIR)/t_matherr.Po ./$(DEPDIR)/t_mbrlen.Po \
 	./$(DEPDIR)/t_mbrtowc.Po ./$(DEPDIR)/t_mbsrtowcs.Po \
 	./$(DEPDIR)/t_municode-t_municode.Po \
-	./$(DEPDIR)/t_nullptrexception.Po ./$(DEPDIR)/t_readdir.Po \
+	./$(DEPDIR)/t_nullptrexception.Po \
+	./$(DEPDIR)/t_printf_g_width.Po ./$(DEPDIR)/t_readdir.Po \
 	./$(DEPDIR)/t_setjmp.Po ./$(DEPDIR)/t_sigv.Po \
 	./$(DEPDIR)/t_snprintf.Po ./$(DEPDIR)/t_snprintf0.Po \
 	./$(DEPDIR)/t_snprintf1.Po ./$(DEPDIR)/t_snwprintf.Po \
@@ -1182,37 +1187,37 @@ SOURCES = $(tests32_libnewcomplextests_a_SOURCES) \
 	t_btowc.c t_findfirst.c t_float.c t_fseeko64.c t_fstat.c \
 	t_imagebase.c t_intrinc.c t_lfs.c t_matherr.c t_mbrlen.c \
 	t_mbrtowc.c t_mbsrtowcs.c t_municode.c t_nullptrexception.c \
-	t_readdir.c t_setjmp.c t_sigv.c t_snprintf.c t_snprintf0.c \
-	t_snprintf1.c t_snwprintf.c t_snwprintf0.c t_snwprintf1.c \
-	t_speed_powl.c t_stat.c t_stat_slash.c t_stdint.c \
-	t_stprintf0_a.c t_stprintf0_u.c t_stprintf1_a.c \
-	t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c t_swprintf.c \
-	t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c t_tmain.c \
-	$(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c t_wcsrtombs.c \
-	t_wcstok_s.c t_wctob.c t_wreaddir.c $(tests32_cabs_SOURCES) \
-	$(tests32_cacos_SOURCES) $(tests32_cacosh_SOURCES) \
-	$(tests32_carg_SOURCES) $(tests32_casin_SOURCES) \
-	$(tests32_casinh_SOURCES) $(tests32_catan_SOURCES) \
-	$(tests32_catanh_SOURCES) $(tests32_ccos_SOURCES) \
-	$(tests32_ccosh_SOURCES) $(tests32_cexp_SOURCES) \
-	$(tests32_cimag_SOURCES) $(tests32_clog_SOURCES) \
-	$(tests32_conj_SOURCES) $(tests32_cpow_SOURCES) \
-	$(tests32_cproj_SOURCES) $(tests32_creal_SOURCES) \
-	$(tests32_csin_SOURCES) $(tests32_csinh_SOURCES) \
-	$(tests32_csqrt_SOURCES) $(tests32_ctan_SOURCES) \
-	$(tests32_ctanh_SOURCES) $(tests64_cabs_SOURCES) \
-	$(tests64_cacos_SOURCES) $(tests64_cacosh_SOURCES) \
-	$(tests64_carg_SOURCES) $(tests64_casin_SOURCES) \
-	$(tests64_casinh_SOURCES) $(tests64_catan_SOURCES) \
-	$(tests64_catanh_SOURCES) $(tests64_ccos_SOURCES) \
-	$(tests64_ccosh_SOURCES) $(tests64_cexp_SOURCES) \
-	$(tests64_cimag_SOURCES) $(tests64_clog_SOURCES) \
-	$(tests64_conj_SOURCES) $(tests64_cpow_SOURCES) \
-	$(tests64_cproj_SOURCES) $(tests64_creal_SOURCES) \
-	$(tests64_csin_SOURCES) $(tests64_csinh_SOURCES) \
-	$(tests64_csqrt_SOURCES) $(tests64_ctan_SOURCES) \
-	$(tests64_ctanh_SOURCES) tstmain_sys_xxx.c tstmainc.c \
-	$(tstmaincpp_SOURCES)
+	t_printf_g_width.c t_readdir.c t_setjmp.c t_sigv.c \
+	t_snprintf.c t_snprintf0.c t_snprintf1.c t_snwprintf.c \
+	t_snwprintf0.c t_snwprintf1.c t_speed_powl.c t_stat.c \
+	t_stat_slash.c t_stdint.c t_stprintf0_a.c t_stprintf0_u.c \
+	t_stprintf1_a.c t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c \
+	t_swprintf.c t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c \
+	t_tmain.c $(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c \
+	t_wcsrtombs.c t_wcstok_s.c t_wctob.c t_wreaddir.c \
+	$(tests32_cabs_SOURCES) $(tests32_cacos_SOURCES) \
+	$(tests32_cacosh_SOURCES) $(tests32_carg_SOURCES) \
+	$(tests32_casin_SOURCES) $(tests32_casinh_SOURCES) \
+	$(tests32_catan_SOURCES) $(tests32_catanh_SOURCES) \
+	$(tests32_ccos_SOURCES) $(tests32_ccosh_SOURCES) \
+	$(tests32_cexp_SOURCES) $(tests32_cimag_SOURCES) \
+	$(tests32_clog_SOURCES) $(tests32_conj_SOURCES) \
+	$(tests32_cpow_SOURCES) $(tests32_cproj_SOURCES) \
+	$(tests32_creal_SOURCES) $(tests32_csin_SOURCES) \
+	$(tests32_csinh_SOURCES) $(tests32_csqrt_SOURCES) \
+	$(tests32_ctan_SOURCES) $(tests32_ctanh_SOURCES) \
+	$(tests64_cabs_SOURCES) $(tests64_cacos_SOURCES) \
+	$(tests64_cacosh_SOURCES) $(tests64_carg_SOURCES) \
+	$(tests64_casin_SOURCES) $(tests64_casinh_SOURCES) \
+	$(tests64_catan_SOURCES) $(tests64_catanh_SOURCES) \
+	$(tests64_ccos_SOURCES) $(tests64_ccosh_SOURCES) \
+	$(tests64_cexp_SOURCES) $(tests64_cimag_SOURCES) \
+	$(tests64_clog_SOURCES) $(tests64_conj_SOURCES) \
+	$(tests64_cpow_SOURCES) $(tests64_cproj_SOURCES) \
+	$(tests64_creal_SOURCES) $(tests64_csin_SOURCES) \
+	$(tests64_csinh_SOURCES) $(tests64_csqrt_SOURCES) \
+	$(tests64_ctan_SOURCES) $(tests64_ctanh_SOURCES) \
+	tstmain_sys_xxx.c tstmainc.c $(tstmaincpp_SOURCES)
 DIST_SOURCES = $(am__tests32_libnewcomplextests_a_SOURCES_DIST) \
 	$(am__tests32_libnewcomplextestsf_a_SOURCES_DIST) \
 	$(am__tests32_libnewcomplextestsld_a_SOURCES_DIST) \
@@ -1223,14 +1228,14 @@ DIST_SOURCES = $(am__tests32_libnewcomplextests_a_SOURCES_DIST) \
 	t_ansi_io.c t_btowc.c t_findfirst.c t_float.c t_fseeko64.c \
 	t_fstat.c t_imagebase.c t_intrinc.c t_lfs.c t_matherr.c \
 	t_mbrlen.c t_mbrtowc.c t_mbsrtowcs.c t_municode.c \
-	t_nullptrexception.c t_readdir.c t_setjmp.c t_sigv.c \
-	t_snprintf.c t_snprintf0.c t_snprintf1.c t_snwprintf.c \
-	t_snwprintf0.c t_snwprintf1.c t_speed_powl.c t_stat.c \
-	t_stat_slash.c t_stdint.c t_stprintf0_a.c t_stprintf0_u.c \
-	t_stprintf1_a.c t_stprintf1_u.c t_stprintf_a.c t_stprintf_u.c \
-	t_swprintf.c t_swprintf0.c t_swprintf1.c t_time.c t_tls1.c \
-	t_tmain.c $(t_trycatch_SOURCES) t_vsscanf.c t_wcrtomb.c \
-	t_wcsrtombs.c t_wcstok_s.c t_wctob.c t_wreaddir.c \
+	t_nullptrexception.c t_printf_g_width.c t_readdir.c t_setjmp.c \
+	t_sigv.c t_snprintf.c t_snprintf0.c t_snprintf1.c \
+	t_snwprintf.c t_snwprintf0.c t_snwprintf1.c t_speed_powl.c \
+	t_stat.c t_stat_slash.c t_stdint.c t_stprintf0_a.c \
+	t_stprintf0_u.c t_stprintf1_a.c t_stprintf1_u.c t_stprintf_a.c \
+	t_stprintf_u.c t_swprintf.c t_swprintf0.c t_swprintf1.c \
+	t_time.c t_tls1.c t_tmain.c $(t_trycatch_SOURCES) t_vsscanf.c \
+	t_wcrtomb.c t_wcsrtombs.c t_wcstok_s.c t_wctob.c t_wreaddir.c \
 	$(am__tests32_cabs_SOURCES_DIST) \
 	$(am__tests32_cacos_SOURCES_DIST) \
 	$(am__tests32_cacosh_SOURCES_DIST) \
@@ -1644,14 +1649,14 @@ AM_CXXFLAGS = @ADD_C_CXX_WARNING_FLAGS@ @ADD_CXX_ONLY_WARNING_FLAGS@
 testcase_progs = tstmainc tstmaincpp tstmain_sys_xxx t__fstat_all \
 	t__stat_all t_aligned_alloc t_ansi_io t_btowc t_findfirst \
 	t_float t_fstat t_intrinc t_imagebase t_lfs t_matherr t_mbrlen \
-	t_mbrtowc t_mbsrtowcs t_nullptrexception t_readdir t_snprintf \
-	t_snprintf0 t_snprintf1 t_swprintf t_swprintf0 t_swprintf1 \
-	t_snwprintf t_snwprintf0 t_snwprintf1 t_stprintf_a \
-	t_stprintf_u t_stprintf0_a t_stprintf0_u t_stprintf1_a \
-	t_stprintf1_u t_setjmp t_sigv t_speed_powl t_stat t_stdint \
-	t_time t_tls1 t_trycatch t_stat_slash t_vsscanf t_wcrtomb \
-	t_wcsrtombs t_wcstok_s t_wctob t_wreaddir t_fseeko64 \
-	$(am__append_1)
+	t_mbrtowc t_mbsrtowcs t_nullptrexception t_printf_g_width \
+	t_readdir t_snprintf t_snprintf0 t_snprintf1 t_swprintf \
+	t_swprintf0 t_swprintf1 t_snwprintf t_snwprintf0 t_snwprintf1 \
+	t_stprintf_a t_stprintf_u t_stprintf0_a t_stprintf0_u \
+	t_stprintf1_a t_stprintf1_u t_setjmp t_sigv t_speed_powl \
+	t_stat t_stdint t_time t_tls1 t_trycatch t_stat_slash \
+	t_vsscanf t_wcrtomb t_wcsrtombs t_wcstok_s t_wctob t_wreaddir \
+	t_fseeko64 $(am__append_1)
 tstmaincpp_SOURCES = tstmaincpp.cpp
 t_trycatch_SOURCES = t_trycatch.cpp
 t_trycatch_LDFLAGS = -static
@@ -2380,6 +2385,10 @@ t_nullptrexception$(EXEEXT): $(t_nullptrexception_OBJECTS) $(t_nullptrexception_
 	@rm -f t_nullptrexception$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(t_nullptrexception_OBJECTS) $(t_nullptrexception_LDADD) $(LIBS)
 
+t_printf_g_width$(EXEEXT): $(t_printf_g_width_OBJECTS) $(t_printf_g_width_DEPENDENCIES) $(EXTRA_t_printf_g_width_DEPENDENCIES) 
+	@rm -f t_printf_g_width$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(t_printf_g_width_OBJECTS) $(t_printf_g_width_LDADD) $(LIBS)
+
 t_readdir$(EXEEXT): $(t_readdir_OBJECTS) $(t_readdir_DEPENDENCIES) $(EXTRA_t_readdir_DEPENDENCIES) 
 	@rm -f t_readdir$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(t_readdir_OBJECTS) $(t_readdir_LDADD) $(LIBS)
@@ -2810,6 +2819,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_mbsrtowcs.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_municode-t_municode.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_nullptrexception.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_printf_g_width.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_readdir.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_setjmp.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/t_sigv.Po@am__quote@ # am--include-marker
@@ -5906,6 +5916,13 @@ t_nullptrexception.log: t_nullptrexception$(EXEEXT)
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
+t_printf_g_width.log: t_printf_g_width$(EXEEXT)
+	@p='t_printf_g_width$(EXEEXT)'; \
+	b='t_printf_g_width'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
 t_readdir.log: t_readdir$(EXEEXT)
 	@p='t_readdir$(EXEEXT)'; \
 	b='t_readdir'; \
@@ -6574,6 +6591,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/t_mbsrtowcs.Po
 	-rm -f ./$(DEPDIR)/t_municode-t_municode.Po
 	-rm -f ./$(DEPDIR)/t_nullptrexception.Po
+	-rm -f ./$(DEPDIR)/t_printf_g_width.Po
 	-rm -f ./$(DEPDIR)/t_readdir.Po
 	-rm -f ./$(DEPDIR)/t_setjmp.Po
 	-rm -f ./$(DEPDIR)/t_sigv.Po
@@ -6849,6 +6867,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/t_mbsrtowcs.Po
 	-rm -f ./$(DEPDIR)/t_municode-t_municode.Po
 	-rm -f ./$(DEPDIR)/t_nullptrexception.Po
+	-rm -f ./$(DEPDIR)/t_printf_g_width.Po
 	-rm -f ./$(DEPDIR)/t_readdir.Po
 	-rm -f ./$(DEPDIR)/t_setjmp.Po
 	-rm -f ./$(DEPDIR)/t_sigv.Po
