crt: Provide emulation of _ftime64 function
Function _ftime64 is available since msvcr70.dll. For older msvcrt versions
provide emulation via 32-bit CRT ftime() function and fill 64-bit time
value via WinAPI GetSystemTime() function which is available on all Windows
versions and returns value in SYSTEMTIME format, including milliseconds.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1154,7 +1154,7 @@ _ctime64
 _findfirst64
 _findnext64
 F_NON_I386(_fstat64) ; i386 _fstat64 replaced by emu
-_ftime64
+F_NON_I386(_ftime64) ; i386 _ftime64 replaced by emu
 _futime64
 _gmtime64
 _localtime64
