--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -574,6 +574,7 @@ src_msvcrt32=\
   misc/_aligned_realloc.c \
   misc/_create_locale.c \
   misc/_free_locale.c \
+  misc/_ftime64.c \
   misc/_get_current_locale.c \
   misc/_get_doserrno.c \
   misc/_get_fmode.c \
@@ -884,6 +885,7 @@ src_pre_msvcr70=\
   misc/_aligned_offset_malloc.c \
   misc/_aligned_offset_realloc.c \
   misc/_aligned_realloc.c \
+  misc/_ftime64.c \
   misc/_time64.c \
   misc/strtoimax.c \
   misc/strtoumax.c \
