crt: Fix return type for POSIX ftime function
POSIX ftime() function returns int. MS _ftime() returns void. Add new
mingw-w64 wrappers around _ftime32() and _ftime64() which returns int 0
for implementing proper POSIX ftime() function.

Function ftime() defined in sys/timeb.h now redirects to either ftime32
or ftime64 symbol, which correctly returns an integer 0.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -72,12 +72,7 @@ ADD_UNDERSCORE(fstat)
 F32(fstat == _fstat32)
 F64(fstat == _fstat64i32)
 #endif
-#ifdef FIXED_SIZE_SYMBOLS
-ADD_UNDERSCORE(ftime)
-#else
-F32(ftime == _ftime32)
-F64(ftime == _ftime64)
-#endif
+; ftime is provided in misc/ftime32.c or misc/ftime64.c as MS _ftime is not ABI compatible with POSIX ftime
 #if defined(UCRTBASE)
 ; HUGE alias and _HUGE variable are provided by math/_huge.c
 #elif defined(CRTDLL)
