crt: Provide emulation of _gmtime64 function
Function _gmtime64 is available since msvcr70.dll. For older msvcrt versions
provide emulation via WinAPI FileTimeToSystemTime() function which is
available on all Windows versions and takes 64-bit time value. To retrieve
thread local storage for gmtime return value (struct tm), use the
_gmtime32() function with dummy value.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1156,7 +1156,7 @@ _findnext64
 F_NON_I386(_fstat64) ; i386 _fstat64 replaced by emu
 F_NON_I386(_ftime64) ; i386 _ftime64 replaced by emu
 _futime64
-_gmtime64
+F_NON_I386(_gmtime64) ; i386 _gmtime64 replaced by emu
 _localtime64
 _mktime64
 F_X86_ANY(_osplatform DATA)
