crt: Provide emulation of _mkgmtime32 and _mkgmtime64 functions
Both functions are available since msvcr80.dll.

Additionally function _mkgmtime64 is available since Windows Server 2003
in system msvcrt.dll library (which predates first x64 version, which was
Windows Server 2003 SP1, and hence _mkgmtime64 is present in all x64 CRT
versions) and function _mkgmtime32 is available since Windows Vista in
system msvcrt.dll library.

For older CRT libraries provide emulation via musl libc __tm_to_secs()
function and normalization via WinAPI FileTimeToSystemTime() function.
We cannot use WinAPI SystemTimeToFileTime() function because it does not
work with invalid / not-normalized structure as opposite of the CRT
_mkgmtime function. Hence that is why the musl libc implementation is
included.

msvcrt _mkgmtime32() does not work for time before year 1970. Add similar
underflow checks into mingw-w64 emulation.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -580,6 +580,8 @@ src_msvcrt32=\
   misc/_get_fmode.c \
   misc/_gmtime64.c \
   misc/_initterm_e.c \
+  misc/_mkgmtime32.c \
+  misc/_mkgmtime64.c \
   misc/_set_doserrno.c \
   misc/_set_fmode.c \
   misc/_time64.c \
@@ -645,6 +647,7 @@ src_msvcrt64=\
   misc/_get_doserrno.c \
   misc/_get_fmode.c \
   misc/_initterm_e.c \
+  misc/_mkgmtime32.c \
   misc/_set_doserrno.c \
   misc/_set_fmode.c \
   misc/output_format.c \
@@ -926,6 +929,8 @@ src_pre_msvcr80=\
   misc/_invalid_parameter.c \
   misc/_invalid_parameter_noinfo.c \
   misc/_invoke_watson.c \
+  misc/_mkgmtime32.c \
+  misc/_mkgmtime64.c \
   misc/_recalloc.c \
   misc/_set_doserrno.c \
   misc/_set_errno.c \
