crt: Add C23 memalignment function
Signed-off-by: Peter Damianov <peter0x44@disroot.org>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -1166,6 +1166,7 @@ src_libmingwex=\
   misc/feupdateenv.c                                misc/fwide.c            misc/getlogin.c              misc/getopt.c          \
   misc/gettimeofday.c    misc/__mingw_has_sse.c      \
   misc/ftime32.c         misc/ftime64.c              \
+  misc/memalignment.c \
   misc/mempcpy.c         misc/mingw-aligned-malloc.c \
   misc/mingw_matherr.c   misc/mingw_mbwc_convert.c  misc/mingw_usleep.c     misc/mingw_wcstod.c          misc/mingw_wcstof.c    \
   misc/mingw_wcstold.c \
